Решение 2.2.2 с исправлениями